<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">X-Cart Admin</string>
    <string name="action_settings">Settings</string>
    <string name="unlock">Unlock</string>
    <string name="enter_to_app">Enter into admin area</string>
    <string name="welcome">Welcome to X-Cart</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="today_sales">Today\nsales(%s)</string>
    <string name="low_stock">Low stock\nproducts</string>
    <string name="visitors_today">Visitors\ntoday</string>
    <string name="products_sold_today">Products\nsold today</string>
    <string name="reviews_today">Reviews\ntoday</string>
    <string name="last_orders">Last orders</string>
    <string name="dashboard">Dashboard</string>
    <string name="orders">Orders</string>
    <string name="products">Products</string>
    <string name="reviews">Reviews</string>
    <string name="users">Users</string>
    <string name="email_colon">Email:</string>
    <string name="product">Product:</string>
    <string name="product_title">Product</string>
    <string name="message_colon">Message:</string>
    <string name="settings_description">image for settings button</string>
    <string name="back_description">image for back button</string>
    <string name="ok_description">image for OK button</string>
    <string name="yes_description">image for yes button</string>
    <string name="no_description">image for no button</string>
    <string name="login_description">image for login button</string>
    <string name="save_description">image for save button</string>
    <string name="product_image_description">product image</string>
    <string name="login_colon">Login:</string>
    <string name="user_type_colon">User type:</string>
    <string name="last_login_colon">Last login:</string>
    <string name="total_orders_colon">Total orders:</string>
    <string name="name_colon">Name:</string>
    <string name="sku_colon">SKU:</string>
    <string name="in_stock_colon">In stock:</string>
    <string name="price_colon">Price:</string>
    <string name="null_number">0.00</string>
    <string name="set_price">Set price</string>
    <string name="product_info">Product info</string>
    <string name="description_colon">Description:</string>
    <string name="show_full_decription">Show full description</string>
    <string name="availability_colon">Availability:</string>
    <string name="sold_colon">Sold:</string>
    <string name="order_id_number">Order #</string>
    <string name="date_colon">Date:</string>
    <string name="items_colon">Items:</string>
    <string name="show">Show</string>
    <string name="change_status">Change status</string>
    <string name="not_finished">Not finished</string>
    <string name="queued">Queued</string>
    <string name="processed">Processed</string>
    <string name="complete">Complete</string>
    <string name="declined">Declined</string>
    <string name="failed">Failed</string>
    <string name="backordered">Backordered</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="order_info">Order info</string>
    <string name="status">Status</string>
    <string name="payment_status">Payment status</string>
    <string name="fulfilment_status">Fulfilment status</string>
    <string name="tracking_number">Tracking number</string>
    <string name="payment_method">Payment method</string>
    <string name="delivery_method">Delivery method</string>
    <string name="customer">Customer</string>
    <string name="billing_info">Billing info</string>
    <string name="shipping_info">Shipping info</string>
    <string name="phone">Phone</string>
    <string name="phone_colon">Phone:</string>
    <string name="fax">Fax</string>
    <string name="items">Items</string>
    <string name="order_cost">Order cost</string>
    <string name="totalCaps">TOTAL</string>
    <string name="subtotal">Subtotal</string>
    <string name="discount">Discount</string>
    <string name="coupon_saving">Coupon saving</string>
    <string name="shipping_cost">Shipping cost</string>
    <string name="send_email">Send email</string>
    <string name="call">Call</string>
    <string name="user_info">User info</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="address">Address</string>
    <string name="orders_list">Orders list</string>
    <string name="search">Search</string>
    <string name="today">Today</string>
    <string name="this_week">This\nweek</string>
    <string name="this_month">This\nmonth</string>
    <string name="all">All</string>
    <string name="low_stock_text">Low stock</string>
    <string name="arrow_description">Arrow for clickable item</string>
    <string name="checking_subscription">Checking subscription…</string>
    <string name="error">Error</string>
    <string name="no_subscription">No subscription</string>
    <string name="subscription_expired">Your subscription has expired.</string>
    <string name="connection_error">Sorry, unable to connect to server. Please check your internet connection</string>
    <string name="login_error">Incorrect email or password</string>
    <string name="logging_in">Logging in…</string>
    <string name="updating_status">Updating status…</string>
    <string name="change_tracking_number">Change tracking number</string>
    <string name="shop_url">Shop url</string>
    <string name="authorization_key">Authorization key</string>
    <string name="checking">Checking…</string>
    <string name="log_in">Log in</string>
    <string name="xcart_icon">X-Cart icon</string>
    <string name="success">Success</string>
    <string name="unable_to_connect_to_server">Sorry, unable to connect to server. Cannot update data. Please check your internet connection</string>
    <string name="play_not_supported">Your device doesn\'t support google play services</string>
    <string name="price_error">The price can not be zero</string>
    <string name="incorrect_input">Incorrect input</string>
    <string name="incorrect_password">incorrect password</string>
    <string name="pack_error">Pack must be bigger than </string>
    <string name="password_error">Password must consists of four digits</string>
    <string name="no_orders">No orders for selected period</string>
    <string name="variants_colon">Variants:</string>
    <string name="options_colon">Options:</string>
    <string name="only_admin_backend">This product can be edited only via admin backend</string>
    <string name="scan_qr">Scan QR</string>
    <string name="shop_url_hint">www.example.com</string>
    <string name="payment_method_surcharge">Payment method surcharge</string>
    <string name="download_limit">Lists download limits</string>
    <string name="other">Other</string>
    <string name="amount_colon">Amount:</string>
    <string name="customer_notes">Customer notes</string>
    <string name="no_notes">No notes</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="action_about">About</string>
    <string name="xcart_mobile_admin">X-Cart Mobile admin</string>
    <string name="xcart_mobile_admin_link">http://www.x-cart.com/mobile-ecommerce-solution.html</string>
    <string name="xcart_help">Help</string>
    <string name="xcart_help_link">http://help.x-cart.com/index.php?title=X-Cart_Mobile_Admin</string>
    <string name="xcart_email_link">http://www.x-cart.com/contact-us.html</string>
    <string name="contact_as">Contact US</string>
    <string name="usa_phone">1-800-657-7957</string>
    <string name="britan_phone">44-207-0434-988</string>
    <string name="universe_phone">7-842-279-4038</string>
    <string name="no_reviews">No reviews</string>
    <string name="no_products">No products</string>
    <string name="close_application_question">Are you sure you want to close X-Cart Admin?</string>
    <string name="closing_application">Closing application</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="pre_authorized">Pre-Authorized</string>
    <string name="about_application_version">X-Cart\nversion %1$s</string>
    <string name="about_exit_button_text">Close</string>
    <string name="twitter">twitter.com/x_cart</string>
    <string name="facebook">facebook.com/xcart</string>
    <string name="about_email_text">Email us</string>
    <string name="fb_link">http://www.facebook.com/xcart</string>
    <string name="tw_link">http://www.twitter.com/x_cart</string>
    <string name="app_id">709247889105649</string>
    <string name="action_share">Share</string>
    <string name="review">Review</string>
    <string name="push_notifications">Push notifications</string>
    <string name="log_out">Log out</string>
    <string name="security">Security</string>
    <string name="security_switch_desc">Enable or disable additional password protection</string>
    <string name="pass_protection">Password protection</string>
    <string name="action_edit">Edit in backend</string>
    <string name="updating_tracking_number">Updating tracking number…</string>
    <string name="subscription_expiring">Subscriptions expiring in the next %s days</string><string name="subscription_trial">Trial version.
Subscriptions expiring in the next %s days</string>
    <string name="incorrect_key">Incorrect key</string>
    <string name="incorrect_shop_url">Incorrect shop url</string>
    <string name="dialog_process_by_paypal_here" >Process the order by PayPalHere?</string>
    <string name="process">Process</string>
    <string name="cancel">Cancel</string>
    <string name="date">Date</string>

</resources>