<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dip">

        <TextView
            android:id="@+id/xcart_mobile_admin"
            android:text="@string/xcart_mobile_admin"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/AboutDialogText" />

        <TextView
            android:id="@+id/xcart_help"
            android:text="@string/xcart_help"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAppearance="@style/AboutDialogText" />

        <TextView
            android:text="@string/contact_as"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAppearance="@style/AboutDialogText" />

        <TextView
            android:text="@string/usa_phone"
            android:clickable="true"

            android:drawableLeft="@drawable/ic_phone_usa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            style="@style/AboutDialogPhoneText" />

        <TextView
            android:text="@string/britan_phone"
            android:clickable="true"

            android:drawableLeft="@drawable/ic_phone_gb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            style="@style/AboutDialogPhoneText" />

        <TextView
            android:text="@string/universe_phone"
            android:clickable="true"

            android:drawableLeft="@drawable/ic_phone_universe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            style="@style/AboutDialogPhoneText" />

        <TextView
            android:id="@+id/fb"
            android:text="@string/facebook"
            android:drawableLeft="@drawable/ic_facebook"
            android:layout_marginTop="20dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:textAppearance="@style/AboutDialogText" />

        <TextView
            android:id="@+id/tw"
            android:text="@string/twitter"
            android:drawableLeft="@drawable/ic_twitter"
            android:layout_marginTop="5dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:textAppearance="@style/AboutDialogText" />

        <TextView
            android:id="@+id/about_email"
            android:text="@string/about_email_text"
            android:layout_marginTop="20dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/AboutDialogText" />
    </LinearLayout>


</ScrollView>