<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.xcart.admin.views.AboutActivity$PlaceholderFragment">

    <TextView
        android:id="@+id/xcart_mobile_admin"
        android:text="@string/xcart_mobile_admin"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/xcart_help"
        android:text="@string/xcart_help"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/contact_as"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/usa_phone"
        android:clickable="true"
        android:autoLink="phone"
        android:drawableLeft="@drawable/image02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/britan_phone"
        android:clickable="true"
        android:autoLink="phone"
        android:drawableLeft="@drawable/image04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/universe_phone"
        android:clickable="true"
        android:autoLink="phone"
        android:drawableLeft="@drawable/image03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/image00"
            android:layout_marginLeft="20dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/image01"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>


</LinearLayout>
